--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gethuman/plivo",
+  "name": "gethuman-plivo",
   "version": "0.4.0",
   "description": "Plivo NodeJS helper library.",
   "main": "lib/plivo.js",
